Fixed everything having huge spacing.

--- a/less/theme.less
+++ b/less/theme.less
@@ -28,8 +28,6 @@ h1,h2,h3,h4,h5,h6,p {
   font-family: 'Lato','Helvetica Neue',Helvetica,sans-serif;
 }
 
-
-
 //Title
 .page-header{
   color: #ffffff;
@@ -298,7 +296,7 @@ h4 a, h5 a, h6 a {
 
 
 p, ul, ol, dl {
-    margin: 0 0 1.6em;
+    margin: 0 0 @bottom-margin;
 }
 
 ol ol, ul ul,
@@ -335,8 +333,8 @@ hr {
 blockquote {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 1.6em 0 1.6em;
-    padding: 0.2em 1.6em;
+    margin: @bottom-margin 0 @bottom-margin;
+    padding: 0.2em @bottom-margin;
     border-left: #4a4a4a 0.4em solid;
     background-color: #f8f8f8;
 }
@@ -378,7 +376,7 @@ code, tt {
 pre {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 1.6em 0;
+    margin: @bottom-margin 0;
     border: 1px solid #E3EDF3;
     width: 100%;
     padding: 10px;
@@ -418,7 +416,7 @@ kbd {
 table {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    margin: 1.6em 0;
+    margin: @bottom-margin 0;
     width:100%;
     max-width: 100%;
     background-color: transparent;
@@ -468,3 +466,5 @@ table.plain tbody > tr:nth-child(odd) > th {
   letter-spacing: -0.2px;
   font-weight: 300;
 }
+
+@bottom-margin: 0.8em;
